# geo-pipeline-mini

./: .gitignore  LICENSE  Makefile  README.md  dashboard.py  pyproject.toml  requirements.txt  soil_pipeline.py  test_pipeline.py
data/demo/: demo_field.csv  soil_targets.csv
data/processed/: pipeline_benchmarks.json  soil_properties.tif
outputs/: metrics.json  predictions.csv
src/pipeline/: __init__.py  plots.py  soil_pipeline.py
tests/: test_pipeline.py
